Wed Jul 29 21:22:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/InstanceState.cpp:

	  Adjusted callback ordering by forcing dispose and unregister
	  transitions to always pend releases based on non-valid sample
	  insertions.

Tue Jul 28 20:07:03 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps.mpb:
        * dds/DdsDcps.mpc:
        * rules.dds.GNU:

          Refactored the way DDS interacts with gnuace.

Tue Jul 28 18:59:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/src/org/opendds/jms/MessageProducerImpl.java:

          Updated JMS producer to dispose of instances after sending
          messages.

Tue Jul 28 18:43:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/multirepo/MultiRepoWorker.java:

          Updated missed java tests to make use of refactored instance
          operations.

Tue Jul 28 17:50:42 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          Fixed an incorrect ordering of callbacks for dispose/unregister;
          this was causing non-valid data samples to be dropped.

Tue Jul 28 14:17:05 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * 14a_README:

          Removed this file.  TAO 1.4a is no longer supported.

Mon Jul 27 23:20:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:

          Updated release notes with instance operation changes.

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:
        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DdsDcpsPublication.idl:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:

          Updated instance operations to comply with formal/07-01-01.

        * DevGuideExamples/DCPS/Messenger/Writer.cpp: