@@ -14,6 +14,7 @@ tests/DCPS/ZeroCopyRead/run_test.pl: !DCPS_MIN
 tests/DCPS/ZeroCopyRead/run_test.pl by_instance: !DCPS_MIN
 tests/DCPS/DCPSInfoRepo/run_test.pl
 tests/DCPS/unit/run_test.pl:
+tests/DCPS/Dispose/run_test.pl: !DCPS_MIN
 tests/DCPS/FooTest3_0/run_test.pl:
 tests/DCPS/FooTest3_0/run_test.pl unregister: !DCPS_MIN
 tests/DCPS/FooTest3_0/run_test.pl dispose: !DCPS_MIN
@@ -80,7 +81,6 @@ tests/DCPS/FooTest5_0/run_test.pl: !STATIC
 tests/DCPS/FooTest5_0/run_test.pl udp: !DCPS_MIN !STATIC
 tests/DCPS/FooTest5_0/run_test.pl diff_trans: !DCPS_MIN !STATIC
 tests/DCPS/FooTest5_0/run_test.pl give_addrs: !DCPS_MIN !STATIC
-tests/DCPS/Instance/run_test.pl: !DCPS_MIN
 tests/DCPS/MultiDPTest/run_test.pl: !DCPS_MIN
 tests/DCPS/TransientLocalTest/run_test.pl: !DCPS_MIN
 tests/DCPS/MultiRepoTest/run_test.pl: !DCPS_MIN
