@@ -1,11 +1,18 @@
+Wed Jul 29 22:07:58 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * bin/dcps_tests.lst:
+        * tests/DCPS/Dispose:
+
+          Renamed Instance test to Dispose.
+
 Wed Jul 29 21:22:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * bin/DCPS/CPPTemplate.pm:
         * dds/DCPS/InstanceState.cpp:
 
-	  Adjusted callback ordering by forcing dispose and unregister
-	  transitions to always pend releases based on non-valid sample
-	  insertions.
+          Adjusted callback ordering by forcing dispose and unregister
+          transitions to always pend releases based on non-valid sample
+          insertions.
 
 Tue Jul 28 20:07:03 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
